# pipeline-monitor

./: .gitignore  .gitpod.dockerfile  .golangci.yml  BUILD.bazel  README.md  SECURITY.md  WORKSPACE  bazel-workspace  cloudwatchlogs.go  codebuild.yml  go.mod  go.sum  main.go  main_test.go  templog.go
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: ci.yaml  greetings.yml  lint.yml  release-publisher.yml
scripts/: BUILD.bazel  commit-syncdeps.sh  syncdeps.sh
